--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <title>Angelos Kounavis | Software Developer</title>
+    <!-- <img src="public/images/portfolio/adventure/pizza1.png" alt=”an artist rendition of a black hole in space”> -->
+      
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
